[package]
name = "vtraceroute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4.4"
pnet = "0.31.0"
pnet_macros = "0.31.0"
pnet_transport = "0.31.0"
anyhow = "1.0.57"
rand = "0.8.5"
dns-lookup = "1.0.8"